# EE631_VisualInspection

./: CMakeLists.txt  README.md  inspection.cpp  project.cpp  train.py
PytorchCPP/: CMakeLists.txt  example_load.cpp  inspection.cpp
